--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 ### IntelliJ IDEA ###
+.idea/
+*.iml
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -25,6 +27,11 @@ bin/
 
 ### VS Code ###
 .vscode/
+
+### Build outputs ###
+production/
+build/
+target/
 
 ### Mac OS ###
 .DS_Store
